--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "discord.js": "^14.22.1",
     "dotenv": "^17.2.1",
     "fastify": "^5.5.0",
     "zod": "^4.1.0"
